--- a/templates/model_card_master.md.j2
+++ b/templates/model_card_master.md.j2
@@ -1,5 +1,37 @@
-# Model Card 
-
 {{ sections.card_metadata }}
 
 ---
+
+{{ sections.model_basic_information }}
+
+---
+
+{{ sections.technical_specifications }}
+
+---
+
+{{ sections.training_data }}
+
+---
+
+{{ sections.evaluations }}
+
+---
+
+{{ sections.other_considerations }}
+
+---
+
+{% if appendix_files %}
+## Appendix
+
+{% for item in appendix_files %}
+- {% if item.label %}**{{ item.label }}:** {% endif %} {{ item.file.name }}
+
+  {% if item.file.url %}
+  ![{{ item.file.name }}]({{ item.file.url }})
+  {% endif %}
+{% endfor %}
+{% endif %}
+
+
