--- a/templates/card_metadata.md.j2
+++ b/templates/card_metadata.md.j2
@@ -4,7 +4,7 @@
 
 ## 0. Card Metadata
 
-**Creation date**: {{ card_metadata_card_creation_date | default("YYYY/MM/DD") }}
+**Creation date**: {{ card_metadata_card_creation_date | default("") }}
 
 ### Versioning
 
