--- a/templates/model_basic_information.md.j2
+++ b/templates/model_basic_information.md.j2
@@ -1,6 +1,6 @@
 ## 1. Model Basic Information
 **Name**: {{ model_basic_information_name | default("") }}
-**Creation date**: {{ model_basic_information_creation_date | default("YYYY/MM/DD") }}
+**Creation date**: {{ model_basic_information_creation_date | default("") }}
 
 ### Versioning
 
