--- a/templates/model_card_master.md.j2
+++ b/templates/model_card_master.md.j2
@@ -22,16 +22,14 @@
 
 ---
 
-{% if appendix_files %}
+{% if appendix_files and appendix_files|length > 0 %}
 ## Appendix
 
 {% for item in appendix_files %}
-- {% if item.label %}**{{ item.label }}:** {% endif %} {{ item.file.name }}
+{% if item.label %}**{{ item.label }}:** {% endif %} {{ item.file.name }}
 
-  {% if item.file.url %}
+  {% if item.file.is_image and item.file.url %}
   ![{{ item.file.name }}]({{ item.file.url }})
   {% endif %}
 {% endfor %}
 {% endif %}
-
-
